--- a/views/default/empresa.html
+++ b/views/default/empresa.html
@@ -12,11 +12,14 @@
 		</legend>
 	</div>
 </div>
+
+<section id="widget-grid" class="">
+    
 <div class="row">
 	<!-- NEW WIDGET START -->
 	<article class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
 <!-- Widget ID (each widget will need unique ID)-->
-							<div class="jarviswidget" id="wid-id-pastel" data-widget-editbutton="false">
+							<div class="jarviswidget" id="wid-id-graf-pastel" data-widget-editbutton="false">
 								<!-- widget options:
 								usage: <div class="jarviswidget" id="wid-id-0" data-widget-editbutton="false">
 								data-widget-colorbutton="false"
@@ -55,7 +58,7 @@
 	<!-- NEW WIDGET START -->
 	<article class="col-xs-6 col-sm-12 col-md-6 col-lg-6">
 		<!-- Widget ID (each widget will need unique ID)-->
-							<div class="jarviswidget" id="wid-id-3" data-widget-editbutton="false">
+							<div class="jarviswidget" id="wid-id-graf-costos" data-widget-editbutton="false">
 								<!-- widget options:
 								usage: <div class="jarviswidget" id="wid-id-0" data-widget-editbutton="false">
 								data-widget-colorbutton="false"
@@ -88,9 +91,9 @@
 							</div>
 							<!-- end widget -->
 	</article>
-	<!-- WIDGET END -->
-	
+	<!-- WIDGET END -->	
 </div>
+</section>
 <!-- end row -->
 <script>
 	/* chart colors default */
