--- a/views/poliza/listar.html
+++ b/views/poliza/listar.html
@@ -229,7 +229,7 @@ $(document).ready(function(){
 <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
         <p>
-            <a href="{{=URL('periodo','index')}}"><i class="fa fa-calendar"></i> Ver periodos</a>
+            <a href="{{=URL('periodo','index')}}" class="btn btn-primary"><i class="fa fa-calendar"></i> Ver periodos</a>
         </p>
     </div>
 </div>
@@ -266,14 +266,8 @@ $(document).ready(function(){
                 <div class="widget-body">
                     <!-- content -->
                     <div id="myTabContent" class="tab-content">
-                        <div class="tab-pane fade active in padding-10 no-padding-bottom" id="s1">
-
-                            <div class="padding-10">
-                                <ul id="expList">
-
+                        <div class=" padding-10 no-padding-bottom" >
                                     {{=polizas}}
-                                </ul>
-                            </div>
                         </div>
                         <!-- end s1 tab pane -->
                     </div>
