--- a/views/default/empresa.html
+++ b/views/default/empresa.html
@@ -17,7 +17,7 @@
     
 <div class="row">
 	<!-- NEW WIDGET START -->
-	<article class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+	<article class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 <!-- Widget ID (each widget will need unique ID)-->
 							<div class="jarviswidget" id="wid-id-graf-pastel" data-widget-editbutton="false">
 								<!-- widget options:
@@ -56,7 +56,7 @@
 	</article>
 	<!-- WIDGET END -->
 	<!-- NEW WIDGET START -->
-	<article class="col-xs-6 col-sm-12 col-md-6 col-lg-6">
+	<article class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 		<!-- Widget ID (each widget will need unique ID)-->
 							<div class="jarviswidget" id="wid-id-graf-costos" data-widget-editbutton="false">
 								<!-- widget options:
@@ -341,6 +341,8 @@
 				if ($('#donut-graph').length) {
 					Morris.Donut({
 						element : 'donut-graph',
+                        hideHover:'auto',
+                        resize:true,
 						data : [{
                             value : {{=lista[0] if lista[0] else 0}},
 							label : 'ACTIVO'
@@ -362,6 +364,8 @@
 
 					Morris.Bar({
 						element : 'normal-bar-graph',
+                        hideHover:'auto',
+                        resize:true,
 						data : [{
 							x : 'Actual',
                             ventas : {{=lista[3] if lista[0] else 0}},
