Cambios en la implementación del backup

--- a/views/empresa/configuracion.html
+++ b/views/empresa/configuracion.html
@@ -21,7 +21,7 @@
                 <a id="{{=session.instancias}}" data-nombre='{{=nom.razon_social}}' class="respaldo" style="cursor:pointer; text-decoration:none;">
                     <h2 style=" color: #305d8c;"><i class='fa fa-copy'></i> Crear respaldo</h2>
                 </a>
-                <p>Haz un respaldo de tu empresa.</p>
+                <p>Haz un respaldo de tu empresa</p>
             </div>
         </div>
         <div class="col-md-4">
@@ -80,6 +80,18 @@
 
 <script>
 
+    $(document).ready(function() {
+        {{url = URL('respaldar', vars={'id': session.instancias}) }}
+
+        $.getJSON("{{=url}}", function(json) {
+            $.each(json, function(index, value) {
+                $('.respaldo').attr('href', value);
+                $('.respaldo').attr('_download', 'respaldo.sql');
+            });
+        });
+    });
+
+    /*
     $('.respaldo').click(function(e) {
 
         id = $(this).attr('id');
@@ -91,12 +103,12 @@
             buttons : "[Sí][No]",
             }, function(ButtonPress, Value) {
             if (ButtonPress == "Sí") {
+
                 $.ajax({
                     type: "post",
                     url: "{{=URL('empresa', 'respaldar')}}",
                     data: {id: id},
                     success: function (response) {
-                        /*mandar mensaje de éxito */
                     },
                     error: function (response) {
                         console.log(response);
@@ -106,6 +118,7 @@
             }
         });
     });
+    */
 
     $('.eliminar-empresa').click(function(e) {
 
