--- a/views/cc_empresa/cc_grid.html
+++ b/views/cc_empresa/cc_grid.html
@@ -1,62 +1,6 @@
 <link href="{{=URL('static', 'css/tabs.css')}}" rel="stylesheet">
 {{extend 'layout.html'}}
-<script>
-    $( document ).ready(function() {
-        $('.tree li:has(li)').addClass('parent_li').find(' > span').attr('title', 'Colapsar esta rama');
-        var children = $('.tree  li.parent_li > span').parent('li.parent_li').find(' > ul > li');
-        if (children.is(":visible")) {
-            children.hide('fast');
-           $('.tree li.parent_li > span').attr('title', 'Expandir esta rama').find(' > i').addClass('fa-plus-circle').removeClass('fa-minus-circle');
-        }
-       
-    });
-    $(function () {
-        
-        $('.tree li.parent_li > span').on('click', function (e) {
-            var children = $(this).parent('li.parent_li').find(' > ul > li');
-            if (children.is(":visible")) {
-                children.hide('fast');
-                $(this).attr('title', 'Expandir esta rama').find(' > i').addClass('fa-plus-circle').removeClass('fa-minus-circle');
-            } else {
-                children.show('fast');
-                $(this).attr('title', 'Colapsar esta rama').find(' > i').addClass('fa-minus-circle').removeClass('fa-plus-circle');
-            }
-            e.stopPropagation();
-        });
-    });
-    function editar_cuenta(cc_id)
-    {
-        window.location.href ='#modal_editar';
-        $( "#form_editar" ).load( '{{=URL('editar_cuenta')}}', { id: cc_id } );
-    } 
-    function crear_cuenta(num_cc_padre, cc_vista_id)
-    {
-        if (cc_vista_id==1){
-            window.location.href ='#modal_crear';
-            $( "#form_crear" ).load( '{{=URL('crear_cuenta')}}', { num_cc_padre: num_cc_padre } );
-        }else{
-            alert('No se puede crear una subcuenta en una cuenta de detalle');
-        }
-    } 
-</script>
 
-<div id="modal_editar" class="modalmask">
-    <div class="modalbox movedown">
-        <a href="#close" title="Cerrar" class="close">X</a>
-        <h2>Editar Cuenta</h2>
-        <div id="form_editar">
-        </div>
-    </div>
-</div> 
-
-<div id="modal_crear" class="modalmask">
-    <div class="modalbox movedown">
-        <a href="#close" title="Cerrar" class="close">X</a>
-        <h2>Crear Cuenta</h2>
-        <div id="form_crear">
-        </div>
-    </div>
-</div>
 
 <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
@@ -119,4 +63,97 @@
     </div>
     <!-- end row -->
 </section>
+
+<!-- Modal -->
+				<div class="modal fade" id="modal_editar" tabindex="-1" role="dialog" aria-labelledby="modal_editar_label" aria-hidden="true">
+					<div class="modal-dialog">
+						<div class="modal-content">
+							<div class="modal-header">
+								<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+									&times;
+								</button>
+								<h4 class="modal-title" id="modal_editar_label">Editar Cuenta</h4>
+							</div>
+							<div class="modal-body">
+								<div class="row">
+									<div class="col-md-12">
+										<div class="well well-sm well-primary">
+											 <div id="form_editar">
+                                             </div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div><!-- /.modal-content -->
+					</div><!-- /.modal-dialog -->
+				</div><!-- /.modal -->
+
 <!-- end widget grid -->
+<!-- Modal -->
+				<div class="modal fade" id="modal_crear" tabindex="-1" role="dialog" aria-labelledby="modal_crear_label" aria-hidden="true">
+					<div class="modal-dialog">
+						<div class="modal-content">
+							<div class="modal-header">
+								<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+									&times;
+								</button>
+								<h4 class="modal-title" id="modal_crear_label">Crear Cuenta</h4>
+							</div>
+							<div class="modal-body">
+								<div class="row">
+									<div class="col-md-12">
+										<div class="well well-sm well-primary">
+											 <div id="form_crear">
+                                             </div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div><!-- /.modal-content -->
+					</div><!-- /.modal-dialog -->
+				</div><!-- /.modal -->
+
+<!-- end widget grid -->
+
+
+<script>
+    $( document ).ready(function() {
+        
+         $('.tree li:has(li)').addClass('parent_li').find(' > span').attr('title', 'Colapsar esta rama');
+        //var children = $('.tree  li.parent_li > span').parent('li.parent_li').find(' > ul > li');
+        //if (children.is(":visible")) {
+        //     children.hide('fast');
+           $('.tree li.parent_li > span').attr('title', 'Expandir esta rama').find(' > i').addClass('fa-plus-circle').removeClass('fa-minus-circle');
+        // }
+        
+       
+    });
+    $(function () {
+        
+        $('.tree li.parent_li > span').on('click', function (e) {
+            var children = $(this).parent('li.parent_li').find(' > ul > li');
+            if (children.is(":visible")) {
+                children.hide('fast');
+                $(this).attr('title', 'Expandir esta rama').find(' > i').addClass('fa-plus-circle').removeClass('fa-minus-circle');
+            } else {
+                children.show('fast');
+                $(this).attr('title', 'Colapsar esta rama').find(' > i').addClass('fa-minus-circle').removeClass('fa-plus-circle');
+            }
+            e.stopPropagation();
+        });
+    });
+    function editar_cuenta(cc_id)
+    {
+
+        $( "#form_editar" ).load( "{{=URL('editar_cuenta')}}", { id: cc_id } );
+        
+    } 
+    function crear_cuenta(num_cc_padre, cc_vista_id)
+    {
+        if (cc_vista_id==1){
+            $( "#form_crear" ).load( '{{=URL('crear_cuenta')}}', { num_cc_padre: num_cc_padre } );
+        }else{
+            alert('No se puede crear una subcuenta en una cuenta de detalle');
+        }
+    } 
+</script>
