--- a/views/empresa/configuracion.html
+++ b/views/empresa/configuracion.html
@@ -60,8 +60,8 @@
                 
                     <fieldset>
                         <section>
-                            <label class="label">Escribe el correo del usuario con quien quieres compartir tu empresa</label>
-                            <label class="input">
+                            <label>Escribe el correo del usuario con quien quieres compartir tu empresa</label>
+                            <label >
                                 {{=form.custom.widget.invitado}}
                             </label>
                         </section>
