--- a/views/cc_empresa/cc_grid.html
+++ b/views/cc_empresa/cc_grid.html
@@ -1,7 +1,4 @@
-<link href="{{=URL('static', 'css/tabs.css')}}" rel="stylesheet">
 {{extend 'layout.html'}}
-
-
 <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
         <legend>
@@ -65,28 +62,28 @@
 </section>
 
 <!-- Modal -->
-				<div class="modal fade" id="modal_editar" tabindex="-1" role="dialog" aria-labelledby="modal_editar_label" aria-hidden="true">
-					<div class="modal-dialog">
-						<div class="modal-content">
-							<div class="modal-header">
-								<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
-									&times;
-								</button>
-								<h4 class="modal-title" id="modal_editar_label">Editar Cuenta</h4>
-							</div>
-							<div class="modal-body">
-								<div class="row">
-									<div class="col-md-12">
-										<div class="well well-sm well-primary">
-											 <div id="form_editar">
-                                             </div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div><!-- /.modal-content -->
-					</div><!-- /.modal-dialog -->
-				</div><!-- /.modal -->
+<div class="modal fade" id="modal_editar" tabindex="-1" role="dialog" aria-labelledby="modal_editar_label" aria-hidden="true">
+	<div class="modal-dialog">
+		<div class="modal-content">            
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+					&times;
+				</button>
+				<h4 class="modal-title" id="modal_editar_label"><i class='fa fa-edit'></i> Editar Cuenta</h4>
+			</div>
+			<div class="modal-body">
+				<div class="row">
+					<div class="col-md-12">
+						<div class="well well-sm well-primary">
+							 <div id="form_editar">
+                             </div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div><!-- /.modal-content -->
+	</div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
 
 <!-- end widget grid -->
 <!-- Modal -->
@@ -97,7 +94,7 @@
 								<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
 									&times;
 								</button>
-								<h4 class="modal-title" id="modal_crear_label">Crear Cuenta</h4>
+								<h4 class="modal-title txt-color-darken" id="modal_crear_label"><i class='fa fa-edit'></i> Crear sub-cuenta</h4>
 							</div>
 							<div class="modal-body">
 								<div class="row">
