Correcion de crear_cuentas

--- a/views/poliza/listar.html
+++ b/views/poliza/listar.html
@@ -111,6 +111,7 @@ $(document).ready(function(){
                 
                 $('.concepto_general').editable("{{=URL('poliza', 'actualiza_poliza')}}",{
                     tooltip: "Click para editar, ENTER para salvar.",
+                    onblur: "submit",
                     indicator: "Actualizando...",
                 });
 
