--- a/views/cc_empresa/editar_cuenta.html
+++ b/views/cc_empresa/editar_cuenta.html
@@ -1,4 +1,4 @@
-<form enctype="multipart/form-data" action="{{=URL('cc_empresa','crear_cuenta')}}" method="post">
+<form enctype="multipart/form-data" action="{{=URL('cc_empresa','editar_cuenta')}}" method="post">
 {{=form.custom.begin}}
    <div class="row">
       <div class="col-md-6">
